[metadata]
license_file = LICENSE.md

[pydocstyle]
inherit = false
convention = numpy
# ignore tests, docs, build and any folder starting with a .
match-dir = (?!tests)(?!docs)(?!build)[^\.].*
# ignore files starting with test, setup, tasks and ending with .py
match = (?!test)(?!setup)(?!tasks)[^\._].*\.py

[flake8]
application-import-names = qucumber
import-order-style = pep8
max-line-length = 80
select = C,E,F,W,B,B950
ignore =
    E203,   # not PEP8 compliant (doesn't like whitespace before ':' which is annoying when slicing)
    E501,   # B950 takes care of this better (max-line-length)
    W503    # not PEP8 compliant (this wants line breaks AFTER binary ops instead of before)
max-complexity = 15
exclude =
    .git,
    __pycache__,
    build,
    dist
per-file-ignores =
    # Ignore "imported but unused" errors for all __init__.py files.
    # Requires the extension 'flake8-per-file-ignores' which can be installed
    #  through pip.
    **/__init__.py: F401, F403

[coverage:run]
branch = True
source = qucumber

[coverage:report]
precision = 2
show_missing = True

# Regexes for lines to exclude from consideration
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain about missing debug-only code:
    def __repr__
    if self\.debug

    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError

    # Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.:

omit =
    qucumber/__version__.py
    **/__init__.py
    setup.py
    tasks.py
    tests/*
